# SunnyDayBot

./: .gitignore  404.html  Cargo.toml  README.md  app.py  btc_alert.py  btc_back_test.py  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  search.html  ticker_notifier.py
.github/workflows/: deploy.yml
docs/: forecast_2025-04-11_08-53.md  forecast_2025-04-11_13-37.md  forecast_2025-04-11_17-22.md  forecast_2025-04-11_17-58.md  forecast_2025-04-11_20-36.md  forecast_2025-04-11_23-34.md  forecast_2025-04-12_06-39.md  forecast_2025-04-12_13-34.md  forecast_2025-04-12_20-35.md  forecast_2025-04-12_23-43.md  forecast_2025-04-13_06-40.md  forecast_2025-04-13_13-36.md  forecast_2025-04-13_20-35.md  forecast_2025-04-13_23-35.md  forecast_2025-04-14_09-57.md  forecast_2025-04-14_13-14.md  forecast_2025-04-14_14-51.md  forecast_2025-04-14_23-07.md  forecast_2025-04-15_13-13.md  forecast_2025-04-15_23-06.md  forecast_2025-04-16_13-13.md  forecast_2025-04-16_23-07.md  forecast_2025-04-17_13-13.md  forecast_2025-04-17_23-06.md  forecast_2025-04-18_13-11.md  forecast_2025-04-18_23-07.md  forecast_2025-04-21_00-52.md  forecast_2025-04-21_13-12.md  forecast_2025-04-21_23-02.md  forecast_2025-04-22_13-13.md  forecast_2025-04-22_23-01.md  forecast_2025-04-23_13-14.md  forecast_2025-04-23_23-01.md  forecast_2025-04-24_00-12.md  forecast_2025-04-24_13-14.md  forecast_2025-04-24_23-01.md  forecast_2025-04-25_13-13.md  forecast_2025-04-27_23-02.md  index.md
search/: search_index.json
src/: main.rs
