[package]
name = "sunnydaybot"
version = "0.1.0"
edition = "2021"

[dependencies]
augurs = { version = "0.10.1", features = ["prophet", "prophet-wasmstan"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
plotters = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
