[project]
name = "nasdaq-price"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.10.0",
    "matplotlib>=3.10.1",
    "mkdocs>=1.6.1",
    "pandas>=2.2.3",
    "prophet>=1.1.6",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
    "yfinance>=0.2.60",
]
